# scoring_api

./: .flake8  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  readme.md
.github/workflows/: ci.yml
src/: api.py  exceptions.py  fields.py  handler.py  requests.py  scoring.py  scoring_requests.py  settings.py  setup_logs.py  store.py
tests/: conftest.py  test.py  utils.py
tests/e2e/: test_e2e.py
tests/integration/: test_integration.py
tests/unit/: test_base_logic.py  test_store_logic.py
