[tool.poetry]
name = "scoring-api"
version = "0.1.0"
description = "Scoring API homework"
authors = ["trifonovtema <artyom85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
